// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WorkingPaperCitation renders  component with a mock espace record 1`] = `
<Provider
  store={
    Object {
      "dispatch": [MockFunction],
      "getState": [MockFunction],
      "subscribe": [MockFunction],
    }
  }
>
  <MemoryRouter
    initialEntries={
      Array [
        Object {
          "key": "testKey",
          "pathname": "/",
        },
      ]
    }
  >
    <Router
      history={
        Object {
          "action": "POP",
          "block": [Function],
          "canGo": [Function],
          "createHref": [Function],
          "entries": Array [
            Object {
              "hash": "",
              "key": "testKey",
              "pathname": "/",
              "search": "",
            },
          ],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "index": 0,
          "length": 1,
          "listen": [Function],
          "location": Object {
            "hash": "",
            "key": "testKey",
            "pathname": "/",
            "search": "",
          },
          "push": [Function],
          "replace": [Function],
        }
      }
    >
      <WorkingPaperCitation
        publication={
          Object {
            "fez_datastream_info": Array [
              Object {
                "dsi_copyright": null,
                "dsi_dsid": "FezACML_UQ_176145.xml",
                "dsi_embargo_date": null,
                "dsi_label": "FezACML security for PID - UQ:176145",
                "dsi_mimetype": "text/xml",
                "dsi_open_access": null,
                "dsi_pid": "UQ:176145",
                "dsi_size": 3639,
                "dsi_state": "A",
              },
              Object {
                "dsi_copyright": null,
                "dsi_dsid": "presmd_wp46.xml",
                "dsi_embargo_date": null,
                "dsi_label": "",
                "dsi_mimetype": "application/xml",
                "dsi_open_access": null,
                "dsi_pid": "UQ:176145",
                "dsi_size": 30860,
                "dsi_state": "A",
              },
              Object {
                "dsi_copyright": null,
                "dsi_dsid": "wp46.pdf",
                "dsi_embargo_date": null,
                "dsi_label": "wp46",
                "dsi_mimetype": "application/pdf",
                "dsi_open_access": 1,
                "dsi_pid": "UQ:176145",
                "dsi_size": 122967,
                "dsi_state": "A",
              },
            ],
            "fez_record_search_key_article_number": null,
            "fez_record_search_key_assigned_group_id": Array [],
            "fez_record_search_key_assigned_user_id": Array [],
            "fez_record_search_key_author": Array [
              Object {
                "rek_author": "Laselle, Laurence",
                "rek_author_id": 28885263,
                "rek_author_order": 1,
                "rek_author_pid": "UQ:176145",
                "rek_author_xsdmf_id": 6593,
              },
              Object {
                "rek_author": "Tisdell, Clem",
                "rek_author_id": 28885264,
                "rek_author_order": 2,
                "rek_author_pid": "UQ:176145",
                "rek_author_xsdmf_id": 6593,
              },
            ],
            "fez_record_search_key_author_affiliation_country": Array [],
            "fez_record_search_key_author_affiliation_full_address": Array [],
            "fez_record_search_key_author_affiliation_id": Array [],
            "fez_record_search_key_author_affiliation_name": Array [],
            "fez_record_search_key_author_id": Array [
              Object {
                "rek_author_id": 0,
                "rek_author_id_id": 28257006,
                "rek_author_id_order": 1,
                "rek_author_id_pid": "UQ:176145",
                "rek_author_id_xsdmf_id": 6588,
              },
              Object {
                "rek_author_id": 610,
                "rek_author_id_id": 28257007,
                "rek_author_id_order": 2,
                "rek_author_id_pid": "UQ:176145",
                "rek_author_id_xsdmf_id": 6588,
              },
            ],
            "fez_record_search_key_contributor": Array [],
            "fez_record_search_key_contributor_id": Array [],
            "fez_record_search_key_corresponding_country": Array [],
            "fez_record_search_key_corresponding_email": Array [],
            "fez_record_search_key_corresponding_name": Array [],
            "fez_record_search_key_corresponding_organisation": Array [],
            "fez_record_search_key_datastream_policy": null,
            "fez_record_search_key_doi": Object {
              "rek_doi": "10.1242/jcs.196651",
              "rek_doi_id": null,
              "rek_doi_pid": "UQ:176145",
            },
            "fez_record_search_key_end_page": Object {
              "rek_end_page": "23",
              "rek_end_page_id": 5502160,
              "rek_end_page_pid": "UQ:176145",
              "rek_end_page_xsdmf_id": 10746,
            },
            "fez_record_search_key_file_attachment_access_condition": Array [],
            "fez_record_search_key_file_attachment_embargo_date": Array [],
            "fez_record_search_key_file_attachment_name": Array [
              Object {
                "rek_file_attachment_name": "presmd_wp46.xml",
                "rek_file_attachment_name_id": 3880976,
                "rek_file_attachment_name_order": 1,
                "rek_file_attachment_name_pid": "UQ:176145",
                "rek_file_attachment_name_xsdmf_id": 6673,
              },
              Object {
                "rek_file_attachment_name": "wp46.pdf",
                "rek_file_attachment_name_id": 3880977,
                "rek_file_attachment_name_order": 2,
                "rek_file_attachment_name_pid": "UQ:176145",
                "rek_file_attachment_name_xsdmf_id": 6673,
              },
            ],
            "fez_record_search_key_grant_acronym": Array [],
            "fez_record_search_key_grant_agency": Array [],
            "fez_record_search_key_grant_agency_id": Array [],
            "fez_record_search_key_grant_text": Array [],
            "fez_record_search_key_institutional_status": null,
            "fez_record_search_key_isderivationof": Array [],
            "fez_record_search_key_isi_loc": null,
            "fez_record_search_key_ismemberof": Array [
              Object {
                "rek_ismemberof": "UQ:13199",
                "rek_ismemberof_id": 11518234,
                "rek_ismemberof_order": 1,
                "rek_ismemberof_pid": "UQ:176145",
                "rek_ismemberof_xsdmf_id": 149,
              },
              Object {
                "rek_ismemberof": "UQ:152266",
                "rek_ismemberof_id": 11518235,
                "rek_ismemberof_order": 2,
                "rek_ismemberof_pid": "UQ:176145",
                "rek_ismemberof_xsdmf_id": 149,
              },
              Object {
                "rek_ismemberof": "UQ:3923",
                "rek_ismemberof_id": 11518236,
                "rek_ismemberof_order": 3,
                "rek_ismemberof_pid": "UQ:176145",
                "rek_ismemberof_xsdmf_id": 149,
              },
            ],
            "fez_record_search_key_keywords": Array [
              Object {
                "rek_keywords": "European Union",
                "rek_keywords_id": 29166484,
                "rek_keywords_order": 1,
                "rek_keywords_pid": "UQ:176145",
                "rek_keywords_xsdmf_id": 7970,
              },
              Object {
                "rek_keywords": "Education",
                "rek_keywords_id": 29166485,
                "rek_keywords_order": 2,
                "rek_keywords_pid": "UQ:176145",
                "rek_keywords_xsdmf_id": 7970,
              },
              Object {
                "rek_keywords": "Employment",
                "rek_keywords_id": 29166486,
                "rek_keywords_order": 3,
                "rek_keywords_pid": "UQ:176145",
                "rek_keywords_xsdmf_id": 7970,
              },
              Object {
                "rek_keywords": "Social inclusion",
                "rek_keywords_id": 29166487,
                "rek_keywords_order": 4,
                "rek_keywords_pid": "UQ:176145",
                "rek_keywords_xsdmf_id": 7970,
              },
            ],
            "fez_record_search_key_language": Array [
              Object {
                "rek_language": "eng",
                "rek_language_id": 5226028,
                "rek_language_order": 1,
                "rek_language_pid": "UQ:176145",
                "rek_language_xsdmf_id": 10742,
              },
            ],
            "fez_record_search_key_link": Array [
              Object {
                "rek_link": "http://www.uq.edu.au/economics/index.html?page=18854",
                "rek_link_id": 3191760,
                "rek_link_order": 1,
                "rek_link_pid": "UQ:176145",
                "rek_link_xsdmf_id": 6685,
              },
            ],
            "fez_record_search_key_link_description": Array [
              Object {
                "rek_link_description": "Link to School of Economics working papers",
                "rek_link_description_id": 3191729,
                "rek_link_description_order": 1,
                "rek_link_description_pid": "UQ:176145",
                "rek_link_description_xsdmf_id": 6684,
              },
            ],
            "fez_record_search_key_notes": Object {
              "rek_notes": "ISSN 1448-8563",
              "rek_notes_id": 1111115,
              "rek_notes_pid": "UQ:176145",
              "rek_notes_xsdmf_id": 12526,
            },
            "fez_record_search_key_oa_status": Object {
              "rek_oa_status": 453697,
              "rek_oa_status_id": 320034,
              "rek_oa_status_pid": "UQ:176145",
              "rek_oa_status_xsdmf_id": 17007,
            },
            "fez_record_search_key_org_name": Object {
              "rek_org_name": "The University of Queensland",
              "rek_org_name_id": 349870,
              "rek_org_name_pid": "UQ:176145",
              "rek_org_name_xsdmf_id": 6613,
            },
            "fez_record_search_key_org_unit_name": Object {
              "rek_org_unit_name": "School of Economics",
              "rek_org_unit_name_id": 339466,
              "rek_org_unit_name_pid": "UQ:176145",
              "rek_org_unit_name_xsdmf_id": 6610,
            },
            "fez_record_search_key_publisher": Object {
              "rek_publisher": "School of Economics",
              "rek_publisher_id": 4431865,
              "rek_publisher_pid": "UQ:176145",
              "rek_publisher_xsdmf_id": 6621,
            },
            "fez_record_search_key_refereed": null,
            "fez_record_search_key_refereed_source": Object {
              "rek_refereed_source": "453638",
              "rek_refereed_source_id": 1182477,
              "rek_refereed_source_pid": "UQ:176145",
              "rek_refereed_source_xsdmf_id": 16623,
            },
            "fez_record_search_key_report_number": Object {
              "rek_report_number": "46",
              "rek_report_number_id": 16088,
              "rek_report_number_pid": "UQ:176145",
              "rek_report_number_xsdmf_id": 6619,
            },
            "fez_record_search_key_scopus_id": null,
            "fez_record_search_key_series": Object {
              "rek_series": "Working papers on Social Economics, Policy and Development",
              "rek_series_id": 193608,
              "rek_series_pid": "UQ:176145",
              "rek_series_xsdmf_id": 6608,
            },
            "fez_record_search_key_start_page": Object {
              "rek_start_page": "1",
              "rek_start_page_id": 5572428,
              "rek_start_page_pid": "UQ:176145",
              "rek_start_page_xsdmf_id": 10745,
            },
            "fez_record_search_key_subject": Array [
              Object {
                "rek_subject": 452775,
                "rek_subject_id": 9095145,
                "rek_subject_order": 1,
                "rek_subject_pid": "UQ:176145",
                "rek_subject_xsdmf_id": 6605,
              },
              Object {
                "rek_subject": 452784,
                "rek_subject_id": 9095146,
                "rek_subject_order": 2,
                "rek_subject_pid": "UQ:176145",
                "rek_subject_xsdmf_id": 6605,
              },
            ],
            "fez_record_search_key_total_pages": Object {
              "rek_total_pages": "23",
              "rek_total_pages_id": 5481346,
              "rek_total_pages_pid": "UQ:176145",
              "rek_total_pages_xsdmf_id": 10747,
            },
            "fez_record_search_key_translated_title": null,
            "rek_altmetric_id": null,
            "rek_altmetric_id_xsdmf_id": null,
            "rek_altmetric_score": null,
            "rek_altmetric_score_xsdmf_id": null,
            "rek_citation": "<a class=\\"citation_author_name\\" title=\\"Browse by Author Name for Laselle, Laurence\\" href=\\"/list/author/Laselle%2C+Laurence/\\">Laselle, Laurence</a> and <a class=\\"author_id_link\\" title=\\"Browse by Author ID for Tisdell, Clem\\" href=\\"/list/author_id/610/\\">Tisdell, Clem</a> (<span class=\\"citation_date\\">2006</span>). <i><a class=\\"citation_title\\" title=\\"Click to view Working Paper: Education, Employment and Social Inclusion within the European Union\\" href=\\"/view/UQ:176145\\">Education, Employment and Social Inclusion within the European Union</a></i>. <span class=\\"citation_series\\">Working papers on Social Economics, Policy and Development</span> <span class=\\"citation_report_number\\">46</span>, <span class=\\"citation_org_unit_name\\">School of Economics</span>, <span class=\\"citation_org_name\\">The University of Queensland</span>.",
            "rek_copyright": "on",
            "rek_copyright_xsdmf_id": 3679,
            "rek_created_date": "2009-04-16T10:09:27Z",
            "rek_created_date_xsdmf_id": 3677,
            "rek_date": "2006-11-01T00:00:00Z",
            "rek_date_xsdmf_id": 6623,
            "rek_depositor": 4005,
            "rek_depositor_affiliation": 803,
            "rek_depositor_affiliation_xsdmf_id": 11881,
            "rek_depositor_xsdmf_id": 7578,
            "rek_description": "Employment and social inclusion have been regular themes in the agenda of the European Union for the past fifteen years. From a soft coordinated approach mainly focused on the fight against unemployment, the European Union has moved towards a more coordinated but still voluntary strategy for its Member States and this agenda now has multiple economic, social and environmental objectives. A constant feature of these strategies has been the use of education and training policies, in particular for young people who are at risk of social exclusion. This paper reviews the relevant agenda of the European Union and presents the concept of second chance schools initiated by the European Commission in 1995. It seeks to understand how the elements associated with these youth and the policy-makers are combined in order to achieve success in terms of job opportunities and better inclusion for young people.",
            "rek_description_xsdmf_id": 11371,
            "rek_display_type": 183,
            "rek_display_type_lookup": "Working Paper",
            "rek_display_type_xsdmf_id": 3673,
            "rek_file_downloads": 74,
            "rek_formatted_abstract": null,
            "rek_formatted_abstract_xsdmf_id": null,
            "rek_formatted_title": null,
            "rek_formatted_title_xsdmf_id": null,
            "rek_genre": "Working Paper",
            "rek_genre_type": null,
            "rek_genre_type_xsdmf_id": null,
            "rek_genre_xsdmf_id": 7215,
            "rek_herdc_notes": null,
            "rek_herdc_notes_xsdmf_id": null,
            "rek_object_type": 3,
            "rek_object_type_xsdmf_id": 3674,
            "rek_pid": "UQ:176145",
            "rek_pubmed_doc_type": null,
            "rek_pubmed_doc_type_xsdmf_id": null,
            "rek_scopus_citation_count": null,
            "rek_scopus_doc_type": null,
            "rek_scopus_doc_type_xsdmf_id": null,
            "rek_security_inherited": 1,
            "rek_status": 2,
            "rek_status_xsdmf_id": 3680,
            "rek_subtype": null,
            "rek_subtype_xsdmf_id": null,
            "rek_thomson_citation_count": null,
            "rek_thomson_citation_count_xsdmf_id": null,
            "rek_title": "Education, Employment and Social Inclusion within the European Union",
            "rek_title_xsdmf_id": 10736,
            "rek_updated_date": "2015-07-31T07:31:06Z",
            "rek_updated_date_xsdmf_id": 3678,
            "rek_wok_doc_type": null,
            "rek_wok_doc_type_xsdmf_id": null,
          }
        }
      >
        <div
          className="citationContent citationWorkingPaper"
        >
          <AuthorsCitationView
            className="citationAuthors"
            getLink={[Function]}
            idSearchKey={
              Object {
                "idKey": "fez_record_search_key_author_id",
                "idOrder": "rek_author_id_order",
                "idSubkey": "rek_author_id",
              }
            }
            initialNumberOfAuthors={10}
            publication={
              Object {
                "fez_datastream_info": Array [
                  Object {
                    "dsi_copyright": null,
                    "dsi_dsid": "FezACML_UQ_176145.xml",
                    "dsi_embargo_date": null,
                    "dsi_label": "FezACML security for PID - UQ:176145",
                    "dsi_mimetype": "text/xml",
                    "dsi_open_access": null,
                    "dsi_pid": "UQ:176145",
                    "dsi_size": 3639,
                    "dsi_state": "A",
                  },
                  Object {
                    "dsi_copyright": null,
                    "dsi_dsid": "presmd_wp46.xml",
                    "dsi_embargo_date": null,
                    "dsi_label": "",
                    "dsi_mimetype": "application/xml",
                    "dsi_open_access": null,
                    "dsi_pid": "UQ:176145",
                    "dsi_size": 30860,
                    "dsi_state": "A",
                  },
                  Object {
                    "dsi_copyright": null,
                    "dsi_dsid": "wp46.pdf",
                    "dsi_embargo_date": null,
                    "dsi_label": "wp46",
                    "dsi_mimetype": "application/pdf",
                    "dsi_open_access": 1,
                    "dsi_pid": "UQ:176145",
                    "dsi_size": 122967,
                    "dsi_state": "A",
                  },
                ],
                "fez_record_search_key_article_number": null,
                "fez_record_search_key_assigned_group_id": Array [],
                "fez_record_search_key_assigned_user_id": Array [],
                "fez_record_search_key_author": Array [
                  Object {
                    "rek_author": "Laselle, Laurence",
                    "rek_author_id": 28885263,
                    "rek_author_order": 1,
                    "rek_author_pid": "UQ:176145",
                    "rek_author_xsdmf_id": 6593,
                  },
                  Object {
                    "rek_author": "Tisdell, Clem",
                    "rek_author_id": 28885264,
                    "rek_author_order": 2,
                    "rek_author_pid": "UQ:176145",
                    "rek_author_xsdmf_id": 6593,
                  },
                ],
                "fez_record_search_key_author_affiliation_country": Array [],
                "fez_record_search_key_author_affiliation_full_address": Array [],
                "fez_record_search_key_author_affiliation_id": Array [],
                "fez_record_search_key_author_affiliation_name": Array [],
                "fez_record_search_key_author_id": Array [
                  Object {
                    "rek_author_id": 0,
                    "rek_author_id_id": 28257006,
                    "rek_author_id_order": 1,
                    "rek_author_id_pid": "UQ:176145",
                    "rek_author_id_xsdmf_id": 6588,
                  },
                  Object {
                    "rek_author_id": 610,
                    "rek_author_id_id": 28257007,
                    "rek_author_id_order": 2,
                    "rek_author_id_pid": "UQ:176145",
                    "rek_author_id_xsdmf_id": 6588,
                  },
                ],
                "fez_record_search_key_contributor": Array [],
                "fez_record_search_key_contributor_id": Array [],
                "fez_record_search_key_corresponding_country": Array [],
                "fez_record_search_key_corresponding_email": Array [],
                "fez_record_search_key_corresponding_name": Array [],
                "fez_record_search_key_corresponding_organisation": Array [],
                "fez_record_search_key_datastream_policy": null,
                "fez_record_search_key_doi": Object {
                  "rek_doi": "10.1242/jcs.196651",
                  "rek_doi_id": null,
                  "rek_doi_pid": "UQ:176145",
                },
                "fez_record_search_key_end_page": Object {
                  "rek_end_page": "23",
                  "rek_end_page_id": 5502160,
                  "rek_end_page_pid": "UQ:176145",
                  "rek_end_page_xsdmf_id": 10746,
                },
                "fez_record_search_key_file_attachment_access_condition": Array [],
                "fez_record_search_key_file_attachment_embargo_date": Array [],
                "fez_record_search_key_file_attachment_name": Array [
                  Object {
                    "rek_file_attachment_name": "presmd_wp46.xml",
                    "rek_file_attachment_name_id": 3880976,
                    "rek_file_attachment_name_order": 1,
                    "rek_file_attachment_name_pid": "UQ:176145",
                    "rek_file_attachment_name_xsdmf_id": 6673,
                  },
                  Object {
                    "rek_file_attachment_name": "wp46.pdf",
                    "rek_file_attachment_name_id": 3880977,
                    "rek_file_attachment_name_order": 2,
                    "rek_file_attachment_name_pid": "UQ:176145",
                    "rek_file_attachment_name_xsdmf_id": 6673,
                  },
                ],
                "fez_record_search_key_grant_acronym": Array [],
                "fez_record_search_key_grant_agency": Array [],
                "fez_record_search_key_grant_agency_id": Array [],
                "fez_record_search_key_grant_text": Array [],
                "fez_record_search_key_institutional_status": null,
                "fez_record_search_key_isderivationof": Array [],
                "fez_record_search_key_isi_loc": null,
                "fez_record_search_key_ismemberof": Array [
                  Object {
                    "rek_ismemberof": "UQ:13199",
                    "rek_ismemberof_id": 11518234,
                    "rek_ismemberof_order": 1,
                    "rek_ismemberof_pid": "UQ:176145",
                    "rek_ismemberof_xsdmf_id": 149,
                  },
                  Object {
                    "rek_ismemberof": "UQ:152266",
                    "rek_ismemberof_id": 11518235,
                    "rek_ismemberof_order": 2,
                    "rek_ismemberof_pid": "UQ:176145",
                    "rek_ismemberof_xsdmf_id": 149,
                  },
                  Object {
                    "rek_ismemberof": "UQ:3923",
                    "rek_ismemberof_id": 11518236,
                    "rek_ismemberof_order": 3,
                    "rek_ismemberof_pid": "UQ:176145",
                    "rek_ismemberof_xsdmf_id": 149,
                  },
                ],
                "fez_record_search_key_keywords": Array [
                  Object {
                    "rek_keywords": "European Union",
                    "rek_keywords_id": 29166484,
                    "rek_keywords_order": 1,
                    "rek_keywords_pid": "UQ:176145",
                    "rek_keywords_xsdmf_id": 7970,
                  },
                  Object {
                    "rek_keywords": "Education",
                    "rek_keywords_id": 29166485,
                    "rek_keywords_order": 2,
                    "rek_keywords_pid": "UQ:176145",
                    "rek_keywords_xsdmf_id": 7970,
                  },
                  Object {
                    "rek_keywords": "Employment",
                    "rek_keywords_id": 29166486,
                    "rek_keywords_order": 3,
                    "rek_keywords_pid": "UQ:176145",
                    "rek_keywords_xsdmf_id": 7970,
                  },
                  Object {
                    "rek_keywords": "Social inclusion",
                    "rek_keywords_id": 29166487,
                    "rek_keywords_order": 4,
                    "rek_keywords_pid": "UQ:176145",
                    "rek_keywords_xsdmf_id": 7970,
                  },
                ],
                "fez_record_search_key_language": Array [
                  Object {
                    "rek_language": "eng",
                    "rek_language_id": 5226028,
                    "rek_language_order": 1,
                    "rek_language_pid": "UQ:176145",
                    "rek_language_xsdmf_id": 10742,
                  },
                ],
                "fez_record_search_key_link": Array [
                  Object {
                    "rek_link": "http://www.uq.edu.au/economics/index.html?page=18854",
                    "rek_link_id": 3191760,
                    "rek_link_order": 1,
                    "rek_link_pid": "UQ:176145",
                    "rek_link_xsdmf_id": 6685,
                  },
                ],
                "fez_record_search_key_link_description": Array [
                  Object {
                    "rek_link_description": "Link to School of Economics working papers",
                    "rek_link_description_id": 3191729,
                    "rek_link_description_order": 1,
                    "rek_link_description_pid": "UQ:176145",
                    "rek_link_description_xsdmf_id": 6684,
                  },
                ],
                "fez_record_search_key_notes": Object {
                  "rek_notes": "ISSN 1448-8563",
                  "rek_notes_id": 1111115,
                  "rek_notes_pid": "UQ:176145",
                  "rek_notes_xsdmf_id": 12526,
                },
                "fez_record_search_key_oa_status": Object {
                  "rek_oa_status": 453697,
                  "rek_oa_status_id": 320034,
                  "rek_oa_status_pid": "UQ:176145",
                  "rek_oa_status_xsdmf_id": 17007,
                },
                "fez_record_search_key_org_name": Object {
                  "rek_org_name": "The University of Queensland",
                  "rek_org_name_id": 349870,
                  "rek_org_name_pid": "UQ:176145",
                  "rek_org_name_xsdmf_id": 6613,
                },
                "fez_record_search_key_org_unit_name": Object {
                  "rek_org_unit_name": "School of Economics",
                  "rek_org_unit_name_id": 339466,
                  "rek_org_unit_name_pid": "UQ:176145",
                  "rek_org_unit_name_xsdmf_id": 6610,
                },
                "fez_record_search_key_publisher": Object {
                  "rek_publisher": "School of Economics",
                  "rek_publisher_id": 4431865,
                  "rek_publisher_pid": "UQ:176145",
                  "rek_publisher_xsdmf_id": 6621,
                },
                "fez_record_search_key_refereed": null,
                "fez_record_search_key_refereed_source": Object {
                  "rek_refereed_source": "453638",
                  "rek_refereed_source_id": 1182477,
                  "rek_refereed_source_pid": "UQ:176145",
                  "rek_refereed_source_xsdmf_id": 16623,
                },
                "fez_record_search_key_report_number": Object {
                  "rek_report_number": "46",
                  "rek_report_number_id": 16088,
                  "rek_report_number_pid": "UQ:176145",
                  "rek_report_number_xsdmf_id": 6619,
                },
                "fez_record_search_key_scopus_id": null,
                "fez_record_search_key_series": Object {
                  "rek_series": "Working papers on Social Economics, Policy and Development",
                  "rek_series_id": 193608,
                  "rek_series_pid": "UQ:176145",
                  "rek_series_xsdmf_id": 6608,
                },
                "fez_record_search_key_start_page": Object {
                  "rek_start_page": "1",
                  "rek_start_page_id": 5572428,
                  "rek_start_page_pid": "UQ:176145",
                  "rek_start_page_xsdmf_id": 10745,
                },
                "fez_record_search_key_subject": Array [
                  Object {
                    "rek_subject": 452775,
                    "rek_subject_id": 9095145,
                    "rek_subject_order": 1,
                    "rek_subject_pid": "UQ:176145",
                    "rek_subject_xsdmf_id": 6605,
                  },
                  Object {
                    "rek_subject": 452784,
                    "rek_subject_id": 9095146,
                    "rek_subject_order": 2,
                    "rek_subject_pid": "UQ:176145",
                    "rek_subject_xsdmf_id": 6605,
                  },
                ],
                "fez_record_search_key_total_pages": Object {
                  "rek_total_pages": "23",
                  "rek_total_pages_id": 5481346,
                  "rek_total_pages_pid": "UQ:176145",
                  "rek_total_pages_xsdmf_id": 10747,
                },
                "fez_record_search_key_translated_title": null,
                "rek_altmetric_id": null,
                "rek_altmetric_id_xsdmf_id": null,
                "rek_altmetric_score": null,
                "rek_altmetric_score_xsdmf_id": null,
                "rek_citation": "<a class=\\"citation_author_name\\" title=\\"Browse by Author Name for Laselle, Laurence\\" href=\\"/list/author/Laselle%2C+Laurence/\\">Laselle, Laurence</a> and <a class=\\"author_id_link\\" title=\\"Browse by Author ID for Tisdell, Clem\\" href=\\"/list/author_id/610/\\">Tisdell, Clem</a> (<span class=\\"citation_date\\">2006</span>). <i><a class=\\"citation_title\\" title=\\"Click to view Working Paper: Education, Employment and Social Inclusion within the European Union\\" href=\\"/view/UQ:176145\\">Education, Employment and Social Inclusion within the European Union</a></i>. <span class=\\"citation_series\\">Working papers on Social Economics, Policy and Development</span> <span class=\\"citation_report_number\\">46</span>, <span class=\\"citation_org_unit_name\\">School of Economics</span>, <span class=\\"citation_org_name\\">The University of Queensland</span>.",
                "rek_copyright": "on",
                "rek_copyright_xsdmf_id": 3679,
                "rek_created_date": "2009-04-16T10:09:27Z",
                "rek_created_date_xsdmf_id": 3677,
                "rek_date": "2006-11-01T00:00:00Z",
                "rek_date_xsdmf_id": 6623,
                "rek_depositor": 4005,
                "rek_depositor_affiliation": 803,
                "rek_depositor_affiliation_xsdmf_id": 11881,
                "rek_depositor_xsdmf_id": 7578,
                "rek_description": "Employment and social inclusion have been regular themes in the agenda of the European Union for the past fifteen years. From a soft coordinated approach mainly focused on the fight against unemployment, the European Union has moved towards a more coordinated but still voluntary strategy for its Member States and this agenda now has multiple economic, social and environmental objectives. A constant feature of these strategies has been the use of education and training policies, in particular for young people who are at risk of social exclusion. This paper reviews the relevant agenda of the European Union and presents the concept of second chance schools initiated by the European Commission in 1995. It seeks to understand how the elements associated with these youth and the policy-makers are combined in order to achieve success in terms of job opportunities and better inclusion for young people.",
                "rek_description_xsdmf_id": 11371,
                "rek_display_type": 183,
                "rek_display_type_lookup": "Working Paper",
                "rek_display_type_xsdmf_id": 3673,
                "rek_file_downloads": 74,
                "rek_formatted_abstract": null,
                "rek_formatted_abstract_xsdmf_id": null,
                "rek_formatted_title": null,
                "rek_formatted_title_xsdmf_id": null,
                "rek_genre": "Working Paper",
                "rek_genre_type": null,
                "rek_genre_type_xsdmf_id": null,
                "rek_genre_xsdmf_id": 7215,
                "rek_herdc_notes": null,
                "rek_herdc_notes_xsdmf_id": null,
                "rek_object_type": 3,
                "rek_object_type_xsdmf_id": 3674,
                "rek_pid": "UQ:176145",
                "rek_pubmed_doc_type": null,
                "rek_pubmed_doc_type_xsdmf_id": null,
                "rek_scopus_citation_count": null,
                "rek_scopus_doc_type": null,
                "rek_scopus_doc_type_xsdmf_id": null,
                "rek_security_inherited": 1,
                "rek_status": 2,
                "rek_status_xsdmf_id": 3680,
                "rek_subtype": null,
                "rek_subtype_xsdmf_id": null,
                "rek_thomson_citation_count": null,
                "rek_thomson_citation_count_xsdmf_id": null,
                "rek_title": "Education, Employment and Social Inclusion within the European Union",
                "rek_title_xsdmf_id": 10736,
                "rek_updated_date": "2015-07-31T07:31:06Z",
                "rek_updated_date_xsdmf_id": 3678,
                "rek_wok_doc_type": null,
                "rek_wok_doc_type_xsdmf_id": null,
              }
            }
            searchKey={
              Object {
                "key": "fez_record_search_key_author",
                "order": "rek_author_order",
                "subkey": "rek_author",
              }
            }
            separator=", "
            showLink={false}
            suffix=" "
            thresholdNumberOfAuthors={3}
          >
            <span
              className="citationAuthors"
            >
              <CitationView
                className="citationAuthor"
                key="citationAuthor_1"
                prefix=""
                suffix=""
                value="Laselle, Laurence"
              >
                <span
                  className="citationAuthor"
                >
                  Laselle, Laurence
                </span>
              </CitationView>
              <CitationView
                className="citationAuthor"
                key="citationAuthor_2"
                prefix=" and "
                suffix=""
                value="Tisdell, Clem"
              >
                <span
                  className="citationAuthor"
                >
                   and 
                  Tisdell, Clem
                </span>
              </CitationView>
               
            </span>
          </AuthorsCitationView>
          <DateCitationView
            className="citationDate"
            date="2006-11-01T00:00:00Z"
            format="YYYY"
            prefix="("
            suffix=")."
          >
            <span
              className="citationDate"
            >
              (
              2006
              ).
            </span>
          </DateCitationView>
          <CitationTitleView
            className="citationTitle"
            prefix=" "
            suffix="."
            value="Education, Employment and Social Inclusion within the European Union"
          >
            <span
              className="citationTitle"
            >
               
              Education, Employment and Social Inclusion within the European Union
              .
            </span>
          </CitationTitleView>
          <CitationView
            className="citationSource"
            prefix=" "
            suffix="."
            value="Working papers on Social Economics, Policy and Development"
          >
            <span
              className="citationSource"
            >
               
              Working papers on Social Economics, Policy and Development
              .
            </span>
          </CitationView>
          <CitationView
            className="citationReportNumber"
            prefix=" "
            suffix="."
            value="46"
          >
            <span
              className="citationReportNumber"
            >
               
              46
              .
            </span>
          </CitationView>
          <CitationView
            className="citationOrgUnit"
            prefix=" "
            suffix=", "
            value="School of Economics"
          >
            <span
              className="citationOrgUnit"
            >
               
              School of Economics
              , 
            </span>
          </CitationView>
          <CitationView
            className="citationOrgName"
            prefix=" "
            suffix="."
            value="The University of Queensland"
          >
            <span
              className="citationOrgName"
            >
               
              The University of Queensland
              .
            </span>
          </CitationView>
          <DoiCitationView
            doi="10.1242/jcs.196651"
          >
            <ExternalLink
              aria-label="Open this DOI in an new window"
              className="citationDoiLink"
              href="https://doi.org/10.1242/jcs.196651"
              openInNewIcon={true}
              rel="noopener noreferrer"
              target="_blank"
              title="Open this DOI in an new window"
            >
              <a
                aria-label="Open this DOI in an new window"
                className="citationDoiLink externalLink showIcon"
                href="https://doi.org/10.1242/jcs.196651"
                rel="noopener noreferrer"
                tabIndex="0"
                target="_blank"
                title="Open this DOI in an new window"
              >
                https://doi.org/10.1242/jcs.196651
              </a>
            </ExternalLink>
          </DoiCitationView>
        </div>
      </WorkingPaperCitation>
    </Router>
  </MemoryRouter>
</Provider>
`;

exports[`WorkingPaperCitation renders  component with an empty doi view 1`] = `
<Provider
  store={
    Object {
      "dispatch": [MockFunction],
      "getState": [MockFunction],
      "subscribe": [MockFunction],
    }
  }
>
  <MemoryRouter
    initialEntries={
      Array [
        Object {
          "key": "testKey",
          "pathname": "/",
        },
      ]
    }
  >
    <Router
      history={
        Object {
          "action": "POP",
          "block": [Function],
          "canGo": [Function],
          "createHref": [Function],
          "entries": Array [
            Object {
              "hash": "",
              "key": "testKey",
              "pathname": "/",
              "search": "",
            },
          ],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "index": 0,
          "length": 1,
          "listen": [Function],
          "location": Object {
            "hash": "",
            "key": "testKey",
            "pathname": "/",
            "search": "",
          },
          "push": [Function],
          "replace": [Function],
        }
      }
    >
      <WorkingPaperCitation
        publication={
          Object {
            "fez_datastream_info": Array [
              Object {
                "dsi_copyright": null,
                "dsi_dsid": "FezACML_UQ_176145.xml",
                "dsi_embargo_date": null,
                "dsi_label": "FezACML security for PID - UQ:176145",
                "dsi_mimetype": "text/xml",
                "dsi_open_access": null,
                "dsi_pid": "UQ:176145",
                "dsi_size": 3639,
                "dsi_state": "A",
              },
              Object {
                "dsi_copyright": null,
                "dsi_dsid": "presmd_wp46.xml",
                "dsi_embargo_date": null,
                "dsi_label": "",
                "dsi_mimetype": "application/xml",
                "dsi_open_access": null,
                "dsi_pid": "UQ:176145",
                "dsi_size": 30860,
                "dsi_state": "A",
              },
              Object {
                "dsi_copyright": null,
                "dsi_dsid": "wp46.pdf",
                "dsi_embargo_date": null,
                "dsi_label": "wp46",
                "dsi_mimetype": "application/pdf",
                "dsi_open_access": 1,
                "dsi_pid": "UQ:176145",
                "dsi_size": 122967,
                "dsi_state": "A",
              },
            ],
            "fez_record_search_key_article_number": null,
            "fez_record_search_key_assigned_group_id": Array [],
            "fez_record_search_key_assigned_user_id": Array [],
            "fez_record_search_key_author": Array [
              Object {
                "rek_author": "Laselle, Laurence",
                "rek_author_id": 28885263,
                "rek_author_order": 1,
                "rek_author_pid": "UQ:176145",
                "rek_author_xsdmf_id": 6593,
              },
              Object {
                "rek_author": "Tisdell, Clem",
                "rek_author_id": 28885264,
                "rek_author_order": 2,
                "rek_author_pid": "UQ:176145",
                "rek_author_xsdmf_id": 6593,
              },
            ],
            "fez_record_search_key_author_affiliation_country": Array [],
            "fez_record_search_key_author_affiliation_full_address": Array [],
            "fez_record_search_key_author_affiliation_id": Array [],
            "fez_record_search_key_author_affiliation_name": Array [],
            "fez_record_search_key_author_id": Array [
              Object {
                "rek_author_id": 0,
                "rek_author_id_id": 28257006,
                "rek_author_id_order": 1,
                "rek_author_id_pid": "UQ:176145",
                "rek_author_id_xsdmf_id": 6588,
              },
              Object {
                "rek_author_id": 610,
                "rek_author_id_id": 28257007,
                "rek_author_id_order": 2,
                "rek_author_id_pid": "UQ:176145",
                "rek_author_id_xsdmf_id": 6588,
              },
            ],
            "fez_record_search_key_contributor": Array [],
            "fez_record_search_key_contributor_id": Array [],
            "fez_record_search_key_corresponding_country": Array [],
            "fez_record_search_key_corresponding_email": Array [],
            "fez_record_search_key_corresponding_name": Array [],
            "fez_record_search_key_corresponding_organisation": Array [],
            "fez_record_search_key_datastream_policy": null,
            "fez_record_search_key_doi": Object {
              "rek_doi": null,
            },
            "fez_record_search_key_end_page": Object {
              "rek_end_page": "23",
              "rek_end_page_id": 5502160,
              "rek_end_page_pid": "UQ:176145",
              "rek_end_page_xsdmf_id": 10746,
            },
            "fez_record_search_key_file_attachment_access_condition": Array [],
            "fez_record_search_key_file_attachment_embargo_date": Array [],
            "fez_record_search_key_file_attachment_name": Array [
              Object {
                "rek_file_attachment_name": "presmd_wp46.xml",
                "rek_file_attachment_name_id": 3880976,
                "rek_file_attachment_name_order": 1,
                "rek_file_attachment_name_pid": "UQ:176145",
                "rek_file_attachment_name_xsdmf_id": 6673,
              },
              Object {
                "rek_file_attachment_name": "wp46.pdf",
                "rek_file_attachment_name_id": 3880977,
                "rek_file_attachment_name_order": 2,
                "rek_file_attachment_name_pid": "UQ:176145",
                "rek_file_attachment_name_xsdmf_id": 6673,
              },
            ],
            "fez_record_search_key_grant_acronym": Array [],
            "fez_record_search_key_grant_agency": Array [],
            "fez_record_search_key_grant_agency_id": Array [],
            "fez_record_search_key_grant_text": Array [],
            "fez_record_search_key_institutional_status": null,
            "fez_record_search_key_isderivationof": Array [],
            "fez_record_search_key_isi_loc": null,
            "fez_record_search_key_ismemberof": Array [
              Object {
                "rek_ismemberof": "UQ:13199",
                "rek_ismemberof_id": 11518234,
                "rek_ismemberof_order": 1,
                "rek_ismemberof_pid": "UQ:176145",
                "rek_ismemberof_xsdmf_id": 149,
              },
              Object {
                "rek_ismemberof": "UQ:152266",
                "rek_ismemberof_id": 11518235,
                "rek_ismemberof_order": 2,
                "rek_ismemberof_pid": "UQ:176145",
                "rek_ismemberof_xsdmf_id": 149,
              },
              Object {
                "rek_ismemberof": "UQ:3923",
                "rek_ismemberof_id": 11518236,
                "rek_ismemberof_order": 3,
                "rek_ismemberof_pid": "UQ:176145",
                "rek_ismemberof_xsdmf_id": 149,
              },
            ],
            "fez_record_search_key_keywords": Array [
              Object {
                "rek_keywords": "European Union",
                "rek_keywords_id": 29166484,
                "rek_keywords_order": 1,
                "rek_keywords_pid": "UQ:176145",
                "rek_keywords_xsdmf_id": 7970,
              },
              Object {
                "rek_keywords": "Education",
                "rek_keywords_id": 29166485,
                "rek_keywords_order": 2,
                "rek_keywords_pid": "UQ:176145",
                "rek_keywords_xsdmf_id": 7970,
              },
              Object {
                "rek_keywords": "Employment",
                "rek_keywords_id": 29166486,
                "rek_keywords_order": 3,
                "rek_keywords_pid": "UQ:176145",
                "rek_keywords_xsdmf_id": 7970,
              },
              Object {
                "rek_keywords": "Social inclusion",
                "rek_keywords_id": 29166487,
                "rek_keywords_order": 4,
                "rek_keywords_pid": "UQ:176145",
                "rek_keywords_xsdmf_id": 7970,
              },
            ],
            "fez_record_search_key_language": Array [
              Object {
                "rek_language": "eng",
                "rek_language_id": 5226028,
                "rek_language_order": 1,
                "rek_language_pid": "UQ:176145",
                "rek_language_xsdmf_id": 10742,
              },
            ],
            "fez_record_search_key_link": Array [
              Object {
                "rek_link": "http://www.uq.edu.au/economics/index.html?page=18854",
                "rek_link_id": 3191760,
                "rek_link_order": 1,
                "rek_link_pid": "UQ:176145",
                "rek_link_xsdmf_id": 6685,
              },
            ],
            "fez_record_search_key_link_description": Array [
              Object {
                "rek_link_description": "Link to School of Economics working papers",
                "rek_link_description_id": 3191729,
                "rek_link_description_order": 1,
                "rek_link_description_pid": "UQ:176145",
                "rek_link_description_xsdmf_id": 6684,
              },
            ],
            "fez_record_search_key_notes": Object {
              "rek_notes": "ISSN 1448-8563",
              "rek_notes_id": 1111115,
              "rek_notes_pid": "UQ:176145",
              "rek_notes_xsdmf_id": 12526,
            },
            "fez_record_search_key_oa_status": Object {
              "rek_oa_status": 453697,
              "rek_oa_status_id": 320034,
              "rek_oa_status_pid": "UQ:176145",
              "rek_oa_status_xsdmf_id": 17007,
            },
            "fez_record_search_key_org_name": Object {
              "rek_org_name": "The University of Queensland",
              "rek_org_name_id": 349870,
              "rek_org_name_pid": "UQ:176145",
              "rek_org_name_xsdmf_id": 6613,
            },
            "fez_record_search_key_org_unit_name": Object {
              "rek_org_unit_name": "School of Economics",
              "rek_org_unit_name_id": 339466,
              "rek_org_unit_name_pid": "UQ:176145",
              "rek_org_unit_name_xsdmf_id": 6610,
            },
            "fez_record_search_key_publisher": Object {
              "rek_publisher": "School of Economics",
              "rek_publisher_id": 4431865,
              "rek_publisher_pid": "UQ:176145",
              "rek_publisher_xsdmf_id": 6621,
            },
            "fez_record_search_key_refereed": null,
            "fez_record_search_key_refereed_source": Object {
              "rek_refereed_source": "453638",
              "rek_refereed_source_id": 1182477,
              "rek_refereed_source_pid": "UQ:176145",
              "rek_refereed_source_xsdmf_id": 16623,
            },
            "fez_record_search_key_report_number": Object {
              "rek_report_number": "46",
              "rek_report_number_id": 16088,
              "rek_report_number_pid": "UQ:176145",
              "rek_report_number_xsdmf_id": 6619,
            },
            "fez_record_search_key_scopus_id": null,
            "fez_record_search_key_series": Object {
              "rek_series": "Working papers on Social Economics, Policy and Development",
              "rek_series_id": 193608,
              "rek_series_pid": "UQ:176145",
              "rek_series_xsdmf_id": 6608,
            },
            "fez_record_search_key_start_page": Object {
              "rek_start_page": "1",
              "rek_start_page_id": 5572428,
              "rek_start_page_pid": "UQ:176145",
              "rek_start_page_xsdmf_id": 10745,
            },
            "fez_record_search_key_subject": Array [
              Object {
                "rek_subject": 452775,
                "rek_subject_id": 9095145,
                "rek_subject_order": 1,
                "rek_subject_pid": "UQ:176145",
                "rek_subject_xsdmf_id": 6605,
              },
              Object {
                "rek_subject": 452784,
                "rek_subject_id": 9095146,
                "rek_subject_order": 2,
                "rek_subject_pid": "UQ:176145",
                "rek_subject_xsdmf_id": 6605,
              },
            ],
            "fez_record_search_key_total_pages": Object {
              "rek_total_pages": "23",
              "rek_total_pages_id": 5481346,
              "rek_total_pages_pid": "UQ:176145",
              "rek_total_pages_xsdmf_id": 10747,
            },
            "fez_record_search_key_translated_title": null,
            "rek_altmetric_id": null,
            "rek_altmetric_id_xsdmf_id": null,
            "rek_altmetric_score": null,
            "rek_altmetric_score_xsdmf_id": null,
            "rek_citation": "<a class=\\"citation_author_name\\" title=\\"Browse by Author Name for Laselle, Laurence\\" href=\\"/list/author/Laselle%2C+Laurence/\\">Laselle, Laurence</a> and <a class=\\"author_id_link\\" title=\\"Browse by Author ID for Tisdell, Clem\\" href=\\"/list/author_id/610/\\">Tisdell, Clem</a> (<span class=\\"citation_date\\">2006</span>). <i><a class=\\"citation_title\\" title=\\"Click to view Working Paper: Education, Employment and Social Inclusion within the European Union\\" href=\\"/view/UQ:176145\\">Education, Employment and Social Inclusion within the European Union</a></i>. <span class=\\"citation_series\\">Working papers on Social Economics, Policy and Development</span> <span class=\\"citation_report_number\\">46</span>, <span class=\\"citation_org_unit_name\\">School of Economics</span>, <span class=\\"citation_org_name\\">The University of Queensland</span>.",
            "rek_copyright": "on",
            "rek_copyright_xsdmf_id": 3679,
            "rek_created_date": "2009-04-16T10:09:27Z",
            "rek_created_date_xsdmf_id": 3677,
            "rek_date": "2006-11-01T00:00:00Z",
            "rek_date_xsdmf_id": 6623,
            "rek_depositor": 4005,
            "rek_depositor_affiliation": 803,
            "rek_depositor_affiliation_xsdmf_id": 11881,
            "rek_depositor_xsdmf_id": 7578,
            "rek_description": "Employment and social inclusion have been regular themes in the agenda of the European Union for the past fifteen years. From a soft coordinated approach mainly focused on the fight against unemployment, the European Union has moved towards a more coordinated but still voluntary strategy for its Member States and this agenda now has multiple economic, social and environmental objectives. A constant feature of these strategies has been the use of education and training policies, in particular for young people who are at risk of social exclusion. This paper reviews the relevant agenda of the European Union and presents the concept of second chance schools initiated by the European Commission in 1995. It seeks to understand how the elements associated with these youth and the policy-makers are combined in order to achieve success in terms of job opportunities and better inclusion for young people.",
            "rek_description_xsdmf_id": 11371,
            "rek_display_type": 183,
            "rek_display_type_lookup": "Working Paper",
            "rek_display_type_xsdmf_id": 3673,
            "rek_file_downloads": 74,
            "rek_formatted_abstract": null,
            "rek_formatted_abstract_xsdmf_id": null,
            "rek_formatted_title": null,
            "rek_formatted_title_xsdmf_id": null,
            "rek_genre": "Working Paper",
            "rek_genre_type": null,
            "rek_genre_type_xsdmf_id": null,
            "rek_genre_xsdmf_id": 7215,
            "rek_herdc_notes": null,
            "rek_herdc_notes_xsdmf_id": null,
            "rek_object_type": 3,
            "rek_object_type_xsdmf_id": 3674,
            "rek_pid": "UQ:176145",
            "rek_pubmed_doc_type": null,
            "rek_pubmed_doc_type_xsdmf_id": null,
            "rek_scopus_citation_count": null,
            "rek_scopus_doc_type": null,
            "rek_scopus_doc_type_xsdmf_id": null,
            "rek_security_inherited": 1,
            "rek_status": 2,
            "rek_status_xsdmf_id": 3680,
            "rek_subtype": null,
            "rek_subtype_xsdmf_id": null,
            "rek_thomson_citation_count": null,
            "rek_thomson_citation_count_xsdmf_id": null,
            "rek_title": "Education, Employment and Social Inclusion within the European Union",
            "rek_title_xsdmf_id": 10736,
            "rek_updated_date": "2015-07-31T07:31:06Z",
            "rek_updated_date_xsdmf_id": 3678,
            "rek_wok_doc_type": null,
            "rek_wok_doc_type_xsdmf_id": null,
          }
        }
      >
        <div
          className="citationContent citationWorkingPaper"
        >
          <AuthorsCitationView
            className="citationAuthors"
            getLink={[Function]}
            idSearchKey={
              Object {
                "idKey": "fez_record_search_key_author_id",
                "idOrder": "rek_author_id_order",
                "idSubkey": "rek_author_id",
              }
            }
            initialNumberOfAuthors={10}
            publication={
              Object {
                "fez_datastream_info": Array [
                  Object {
                    "dsi_copyright": null,
                    "dsi_dsid": "FezACML_UQ_176145.xml",
                    "dsi_embargo_date": null,
                    "dsi_label": "FezACML security for PID - UQ:176145",
                    "dsi_mimetype": "text/xml",
                    "dsi_open_access": null,
                    "dsi_pid": "UQ:176145",
                    "dsi_size": 3639,
                    "dsi_state": "A",
                  },
                  Object {
                    "dsi_copyright": null,
                    "dsi_dsid": "presmd_wp46.xml",
                    "dsi_embargo_date": null,
                    "dsi_label": "",
                    "dsi_mimetype": "application/xml",
                    "dsi_open_access": null,
                    "dsi_pid": "UQ:176145",
                    "dsi_size": 30860,
                    "dsi_state": "A",
                  },
                  Object {
                    "dsi_copyright": null,
                    "dsi_dsid": "wp46.pdf",
                    "dsi_embargo_date": null,
                    "dsi_label": "wp46",
                    "dsi_mimetype": "application/pdf",
                    "dsi_open_access": 1,
                    "dsi_pid": "UQ:176145",
                    "dsi_size": 122967,
                    "dsi_state": "A",
                  },
                ],
                "fez_record_search_key_article_number": null,
                "fez_record_search_key_assigned_group_id": Array [],
                "fez_record_search_key_assigned_user_id": Array [],
                "fez_record_search_key_author": Array [
                  Object {
                    "rek_author": "Laselle, Laurence",
                    "rek_author_id": 28885263,
                    "rek_author_order": 1,
                    "rek_author_pid": "UQ:176145",
                    "rek_author_xsdmf_id": 6593,
                  },
                  Object {
                    "rek_author": "Tisdell, Clem",
                    "rek_author_id": 28885264,
                    "rek_author_order": 2,
                    "rek_author_pid": "UQ:176145",
                    "rek_author_xsdmf_id": 6593,
                  },
                ],
                "fez_record_search_key_author_affiliation_country": Array [],
                "fez_record_search_key_author_affiliation_full_address": Array [],
                "fez_record_search_key_author_affiliation_id": Array [],
                "fez_record_search_key_author_affiliation_name": Array [],
                "fez_record_search_key_author_id": Array [
                  Object {
                    "rek_author_id": 0,
                    "rek_author_id_id": 28257006,
                    "rek_author_id_order": 1,
                    "rek_author_id_pid": "UQ:176145",
                    "rek_author_id_xsdmf_id": 6588,
                  },
                  Object {
                    "rek_author_id": 610,
                    "rek_author_id_id": 28257007,
                    "rek_author_id_order": 2,
                    "rek_author_id_pid": "UQ:176145",
                    "rek_author_id_xsdmf_id": 6588,
                  },
                ],
                "fez_record_search_key_contributor": Array [],
                "fez_record_search_key_contributor_id": Array [],
                "fez_record_search_key_corresponding_country": Array [],
                "fez_record_search_key_corresponding_email": Array [],
                "fez_record_search_key_corresponding_name": Array [],
                "fez_record_search_key_corresponding_organisation": Array [],
                "fez_record_search_key_datastream_policy": null,
                "fez_record_search_key_doi": Object {
                  "rek_doi": null,
                },
                "fez_record_search_key_end_page": Object {
                  "rek_end_page": "23",
                  "rek_end_page_id": 5502160,
                  "rek_end_page_pid": "UQ:176145",
                  "rek_end_page_xsdmf_id": 10746,
                },
                "fez_record_search_key_file_attachment_access_condition": Array [],
                "fez_record_search_key_file_attachment_embargo_date": Array [],
                "fez_record_search_key_file_attachment_name": Array [
                  Object {
                    "rek_file_attachment_name": "presmd_wp46.xml",
                    "rek_file_attachment_name_id": 3880976,
                    "rek_file_attachment_name_order": 1,
                    "rek_file_attachment_name_pid": "UQ:176145",
                    "rek_file_attachment_name_xsdmf_id": 6673,
                  },
                  Object {
                    "rek_file_attachment_name": "wp46.pdf",
                    "rek_file_attachment_name_id": 3880977,
                    "rek_file_attachment_name_order": 2,
                    "rek_file_attachment_name_pid": "UQ:176145",
                    "rek_file_attachment_name_xsdmf_id": 6673,
                  },
                ],
                "fez_record_search_key_grant_acronym": Array [],
                "fez_record_search_key_grant_agency": Array [],
                "fez_record_search_key_grant_agency_id": Array [],
                "fez_record_search_key_grant_text": Array [],
                "fez_record_search_key_institutional_status": null,
                "fez_record_search_key_isderivationof": Array [],
                "fez_record_search_key_isi_loc": null,
                "fez_record_search_key_ismemberof": Array [
                  Object {
                    "rek_ismemberof": "UQ:13199",
                    "rek_ismemberof_id": 11518234,
                    "rek_ismemberof_order": 1,
                    "rek_ismemberof_pid": "UQ:176145",
                    "rek_ismemberof_xsdmf_id": 149,
                  },
                  Object {
                    "rek_ismemberof": "UQ:152266",
                    "rek_ismemberof_id": 11518235,
                    "rek_ismemberof_order": 2,
                    "rek_ismemberof_pid": "UQ:176145",
                    "rek_ismemberof_xsdmf_id": 149,
                  },
                  Object {
                    "rek_ismemberof": "UQ:3923",
                    "rek_ismemberof_id": 11518236,
                    "rek_ismemberof_order": 3,
                    "rek_ismemberof_pid": "UQ:176145",
                    "rek_ismemberof_xsdmf_id": 149,
                  },
                ],
                "fez_record_search_key_keywords": Array [
                  Object {
                    "rek_keywords": "European Union",
                    "rek_keywords_id": 29166484,
                    "rek_keywords_order": 1,
                    "rek_keywords_pid": "UQ:176145",
                    "rek_keywords_xsdmf_id": 7970,
                  },
                  Object {
                    "rek_keywords": "Education",
                    "rek_keywords_id": 29166485,
                    "rek_keywords_order": 2,
                    "rek_keywords_pid": "UQ:176145",
                    "rek_keywords_xsdmf_id": 7970,
                  },
                  Object {
                    "rek_keywords": "Employment",
                    "rek_keywords_id": 29166486,
                    "rek_keywords_order": 3,
                    "rek_keywords_pid": "UQ:176145",
                    "rek_keywords_xsdmf_id": 7970,
                  },
                  Object {
                    "rek_keywords": "Social inclusion",
                    "rek_keywords_id": 29166487,
                    "rek_keywords_order": 4,
                    "rek_keywords_pid": "UQ:176145",
                    "rek_keywords_xsdmf_id": 7970,
                  },
                ],
                "fez_record_search_key_language": Array [
                  Object {
                    "rek_language": "eng",
                    "rek_language_id": 5226028,
                    "rek_language_order": 1,
                    "rek_language_pid": "UQ:176145",
                    "rek_language_xsdmf_id": 10742,
                  },
                ],
                "fez_record_search_key_link": Array [
                  Object {
                    "rek_link": "http://www.uq.edu.au/economics/index.html?page=18854",
                    "rek_link_id": 3191760,
                    "rek_link_order": 1,
                    "rek_link_pid": "UQ:176145",
                    "rek_link_xsdmf_id": 6685,
                  },
                ],
                "fez_record_search_key_link_description": Array [
                  Object {
                    "rek_link_description": "Link to School of Economics working papers",
                    "rek_link_description_id": 3191729,
                    "rek_link_description_order": 1,
                    "rek_link_description_pid": "UQ:176145",
                    "rek_link_description_xsdmf_id": 6684,
                  },
                ],
                "fez_record_search_key_notes": Object {
                  "rek_notes": "ISSN 1448-8563",
                  "rek_notes_id": 1111115,
                  "rek_notes_pid": "UQ:176145",
                  "rek_notes_xsdmf_id": 12526,
                },
                "fez_record_search_key_oa_status": Object {
                  "rek_oa_status": 453697,
                  "rek_oa_status_id": 320034,
                  "rek_oa_status_pid": "UQ:176145",
                  "rek_oa_status_xsdmf_id": 17007,
                },
                "fez_record_search_key_org_name": Object {
                  "rek_org_name": "The University of Queensland",
                  "rek_org_name_id": 349870,
                  "rek_org_name_pid": "UQ:176145",
                  "rek_org_name_xsdmf_id": 6613,
                },
                "fez_record_search_key_org_unit_name": Object {
                  "rek_org_unit_name": "School of Economics",
                  "rek_org_unit_name_id": 339466,
                  "rek_org_unit_name_pid": "UQ:176145",
                  "rek_org_unit_name_xsdmf_id": 6610,
                },
                "fez_record_search_key_publisher": Object {
                  "rek_publisher": "School of Economics",
                  "rek_publisher_id": 4431865,
                  "rek_publisher_pid": "UQ:176145",
                  "rek_publisher_xsdmf_id": 6621,
                },
                "fez_record_search_key_refereed": null,
                "fez_record_search_key_refereed_source": Object {
                  "rek_refereed_source": "453638",
                  "rek_refereed_source_id": 1182477,
                  "rek_refereed_source_pid": "UQ:176145",
                  "rek_refereed_source_xsdmf_id": 16623,
                },
                "fez_record_search_key_report_number": Object {
                  "rek_report_number": "46",
                  "rek_report_number_id": 16088,
                  "rek_report_number_pid": "UQ:176145",
                  "rek_report_number_xsdmf_id": 6619,
                },
                "fez_record_search_key_scopus_id": null,
                "fez_record_search_key_series": Object {
                  "rek_series": "Working papers on Social Economics, Policy and Development",
                  "rek_series_id": 193608,
                  "rek_series_pid": "UQ:176145",
                  "rek_series_xsdmf_id": 6608,
                },
                "fez_record_search_key_start_page": Object {
                  "rek_start_page": "1",
                  "rek_start_page_id": 5572428,
                  "rek_start_page_pid": "UQ:176145",
                  "rek_start_page_xsdmf_id": 10745,
                },
                "fez_record_search_key_subject": Array [
                  Object {
                    "rek_subject": 452775,
                    "rek_subject_id": 9095145,
                    "rek_subject_order": 1,
                    "rek_subject_pid": "UQ:176145",
                    "rek_subject_xsdmf_id": 6605,
                  },
                  Object {
                    "rek_subject": 452784,
                    "rek_subject_id": 9095146,
                    "rek_subject_order": 2,
                    "rek_subject_pid": "UQ:176145",
                    "rek_subject_xsdmf_id": 6605,
                  },
                ],
                "fez_record_search_key_total_pages": Object {
                  "rek_total_pages": "23",
                  "rek_total_pages_id": 5481346,
                  "rek_total_pages_pid": "UQ:176145",
                  "rek_total_pages_xsdmf_id": 10747,
                },
                "fez_record_search_key_translated_title": null,
                "rek_altmetric_id": null,
                "rek_altmetric_id_xsdmf_id": null,
                "rek_altmetric_score": null,
                "rek_altmetric_score_xsdmf_id": null,
                "rek_citation": "<a class=\\"citation_author_name\\" title=\\"Browse by Author Name for Laselle, Laurence\\" href=\\"/list/author/Laselle%2C+Laurence/\\">Laselle, Laurence</a> and <a class=\\"author_id_link\\" title=\\"Browse by Author ID for Tisdell, Clem\\" href=\\"/list/author_id/610/\\">Tisdell, Clem</a> (<span class=\\"citation_date\\">2006</span>). <i><a class=\\"citation_title\\" title=\\"Click to view Working Paper: Education, Employment and Social Inclusion within the European Union\\" href=\\"/view/UQ:176145\\">Education, Employment and Social Inclusion within the European Union</a></i>. <span class=\\"citation_series\\">Working papers on Social Economics, Policy and Development</span> <span class=\\"citation_report_number\\">46</span>, <span class=\\"citation_org_unit_name\\">School of Economics</span>, <span class=\\"citation_org_name\\">The University of Queensland</span>.",
                "rek_copyright": "on",
                "rek_copyright_xsdmf_id": 3679,
                "rek_created_date": "2009-04-16T10:09:27Z",
                "rek_created_date_xsdmf_id": 3677,
                "rek_date": "2006-11-01T00:00:00Z",
                "rek_date_xsdmf_id": 6623,
                "rek_depositor": 4005,
                "rek_depositor_affiliation": 803,
                "rek_depositor_affiliation_xsdmf_id": 11881,
                "rek_depositor_xsdmf_id": 7578,
                "rek_description": "Employment and social inclusion have been regular themes in the agenda of the European Union for the past fifteen years. From a soft coordinated approach mainly focused on the fight against unemployment, the European Union has moved towards a more coordinated but still voluntary strategy for its Member States and this agenda now has multiple economic, social and environmental objectives. A constant feature of these strategies has been the use of education and training policies, in particular for young people who are at risk of social exclusion. This paper reviews the relevant agenda of the European Union and presents the concept of second chance schools initiated by the European Commission in 1995. It seeks to understand how the elements associated with these youth and the policy-makers are combined in order to achieve success in terms of job opportunities and better inclusion for young people.",
                "rek_description_xsdmf_id": 11371,
                "rek_display_type": 183,
                "rek_display_type_lookup": "Working Paper",
                "rek_display_type_xsdmf_id": 3673,
                "rek_file_downloads": 74,
                "rek_formatted_abstract": null,
                "rek_formatted_abstract_xsdmf_id": null,
                "rek_formatted_title": null,
                "rek_formatted_title_xsdmf_id": null,
                "rek_genre": "Working Paper",
                "rek_genre_type": null,
                "rek_genre_type_xsdmf_id": null,
                "rek_genre_xsdmf_id": 7215,
                "rek_herdc_notes": null,
                "rek_herdc_notes_xsdmf_id": null,
                "rek_object_type": 3,
                "rek_object_type_xsdmf_id": 3674,
                "rek_pid": "UQ:176145",
                "rek_pubmed_doc_type": null,
                "rek_pubmed_doc_type_xsdmf_id": null,
                "rek_scopus_citation_count": null,
                "rek_scopus_doc_type": null,
                "rek_scopus_doc_type_xsdmf_id": null,
                "rek_security_inherited": 1,
                "rek_status": 2,
                "rek_status_xsdmf_id": 3680,
                "rek_subtype": null,
                "rek_subtype_xsdmf_id": null,
                "rek_thomson_citation_count": null,
                "rek_thomson_citation_count_xsdmf_id": null,
                "rek_title": "Education, Employment and Social Inclusion within the European Union",
                "rek_title_xsdmf_id": 10736,
                "rek_updated_date": "2015-07-31T07:31:06Z",
                "rek_updated_date_xsdmf_id": 3678,
                "rek_wok_doc_type": null,
                "rek_wok_doc_type_xsdmf_id": null,
              }
            }
            searchKey={
              Object {
                "key": "fez_record_search_key_author",
                "order": "rek_author_order",
                "subkey": "rek_author",
              }
            }
            separator=", "
            showLink={false}
            suffix=" "
            thresholdNumberOfAuthors={3}
          >
            <span
              className="citationAuthors"
            >
              <CitationView
                className="citationAuthor"
                key="citationAuthor_1"
                prefix=""
                suffix=""
                value="Laselle, Laurence"
              >
                <span
                  className="citationAuthor"
                >
                  Laselle, Laurence
                </span>
              </CitationView>
              <CitationView
                className="citationAuthor"
                key="citationAuthor_2"
                prefix=" and "
                suffix=""
                value="Tisdell, Clem"
              >
                <span
                  className="citationAuthor"
                >
                   and 
                  Tisdell, Clem
                </span>
              </CitationView>
               
            </span>
          </AuthorsCitationView>
          <DateCitationView
            className="citationDate"
            date="2006-11-01T00:00:00Z"
            format="YYYY"
            prefix="("
            suffix=")."
          >
            <span
              className="citationDate"
            >
              (
              2006
              ).
            </span>
          </DateCitationView>
          <CitationTitleView
            className="citationTitle"
            prefix=" "
            suffix="."
            value="Education, Employment and Social Inclusion within the European Union"
          >
            <span
              className="citationTitle"
            >
               
              Education, Employment and Social Inclusion within the European Union
              .
            </span>
          </CitationTitleView>
          <CitationView
            className="citationSource"
            prefix=" "
            suffix="."
            value="Working papers on Social Economics, Policy and Development"
          >
            <span
              className="citationSource"
            >
               
              Working papers on Social Economics, Policy and Development
              .
            </span>
          </CitationView>
          <CitationView
            className="citationReportNumber"
            prefix=" "
            suffix="."
            value="46"
          >
            <span
              className="citationReportNumber"
            >
               
              46
              .
            </span>
          </CitationView>
          <CitationView
            className="citationOrgUnit"
            prefix=" "
            suffix=", "
            value="School of Economics"
          >
            <span
              className="citationOrgUnit"
            >
               
              School of Economics
              , 
            </span>
          </CitationView>
          <CitationView
            className="citationOrgName"
            prefix=" "
            suffix="."
            value="The University of Queensland"
          >
            <span
              className="citationOrgName"
            >
               
              The University of Queensland
              .
            </span>
          </CitationView>
          <DoiCitationView
            doi={null}
          >
            <span
              className="citationDOI empty"
            />
          </DoiCitationView>
        </div>
      </WorkingPaperCitation>
    </Router>
  </MemoryRouter>
</Provider>
`;

exports[`WorkingPaperCitation renders  component with empty publication 1`] = `
<Provider
  store={
    Object {
      "dispatch": [MockFunction],
      "getState": [MockFunction],
      "subscribe": [MockFunction],
    }
  }
>
  <MemoryRouter
    initialEntries={
      Array [
        Object {
          "key": "testKey",
          "pathname": "/",
        },
      ]
    }
  >
    <Router
      history={
        Object {
          "action": "POP",
          "block": [Function],
          "canGo": [Function],
          "createHref": [Function],
          "entries": Array [
            Object {
              "hash": "",
              "key": "testKey",
              "pathname": "/",
              "search": "",
            },
          ],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "index": 0,
          "length": 1,
          "listen": [Function],
          "location": Object {
            "hash": "",
            "key": "testKey",
            "pathname": "/",
            "search": "",
          },
          "push": [Function],
          "replace": [Function],
        }
      }
    >
      <WorkingPaperCitation
        publication={Object {}}
      >
        <div
          className="citationContent citationWorkingPaper"
        >
          <AuthorsCitationView
            className="citationAuthors"
            getLink={[Function]}
            idSearchKey={
              Object {
                "idKey": "fez_record_search_key_author_id",
                "idOrder": "rek_author_id_order",
                "idSubkey": "rek_author_id",
              }
            }
            initialNumberOfAuthors={10}
            publication={Object {}}
            searchKey={
              Object {
                "key": "fez_record_search_key_author",
                "order": "rek_author_order",
                "subkey": "rek_author",
              }
            }
            separator=", "
            showLink={false}
            suffix=" "
            thresholdNumberOfAuthors={3}
          >
            <span
              className="citationAuthors empty"
            />
          </AuthorsCitationView>
          <DateCitationView
            className="citationDate"
            format="YYYY"
            prefix="("
            suffix=")."
          >
            <span
              className="citationDate empty"
            />
          </DateCitationView>
          <CitationTitleView
            className="citationTitle"
            prefix=" "
            suffix="."
          >
            <span
              className="citationTitle empty"
            />
          </CitationTitleView>
          <CitationView
            className="citationSource"
            prefix=" "
            suffix="."
            value={null}
          >
            <span
              className="citationSource empty"
            />
          </CitationView>
          <CitationView
            className="citationReportNumber"
            prefix=" "
            suffix="."
            value={null}
          >
            <span
              className="citationReportNumber empty"
            />
          </CitationView>
          <CitationView
            className="citationOrgUnit"
            prefix=" "
            suffix=", "
            value={null}
          >
            <span
              className="citationOrgUnit empty"
            />
          </CitationView>
          <CitationView
            className="citationOrgName"
            prefix=" "
            suffix="."
            value={null}
          >
            <span
              className="citationOrgName empty"
            />
          </CitationView>
          <DoiCitationView
            doi={null}
          >
            <span
              className="citationDOI empty"
            />
          </DoiCitationView>
        </div>
      </WorkingPaperCitation>
    </Router>
  </MemoryRouter>
</Provider>
`;
